--- a/component-library/components/generic/social-icons/social-icons.scss
+++ b/component-library/components/generic/social-icons/social-icons.scss
@@ -1,35 +1,39 @@
 .c-social-icons {
-    background-color: black;
     display: flex;
     align-items: center;
     gap: 1rem;
-
+  
     --dynamic-fill-color: var(--fill-color, var(--brand-grey-000));
     --dynamic-hover-color: var(--hover-color, var(--brand-grey-000));
-
+    --dynamic-fill-color-hover: var(--fill-color-hover, var(--brand-grey-900));
+  
     &__icon {
-        padding: 12px;
-        border-radius: 40px;
-        width: 20px;
-        height: 20px;
-        transition: background-color 300ms ease-out, fill 300ms ease-out;
-
-        svg, img {
-            width: 20px;
-            height: 20px;
-
-            * {
-                fill: var(--dynamic-fill-color);
-                transition: fill 300ms ease-out;
-            }
+      display: flex; 
+      justify-content: center; 
+      align-items: center;
+      padding: 12px;
+      border-radius: 2.5rem;
+      width: 2.75rem;
+      height: 2.75rem;
+      transition: background-color 300ms ease-out, fill 300ms ease-out;
+      box-sizing: border-box;
+  
+      svg, img {
+        * {
+          fill: var(--dynamic-fill-color);
+          transition: fill 300ms ease-out;
+          width: 1.25rem;
+          height: 1.25rem;
         }
-
-        &:hover {
-            background-color: var(--dynamic-hover-color);
-
-            * {
-                fill: var(--brand-grey-900);
-            }
+      }
+  
+      &:hover {
+        background-color: var(--dynamic-hover-color);
+  
+        * {
+          fill: var(--dynamic-fill-color-hover);
         }
+      }
     }
-}
+  }
+  
