--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -10,7 +10,7 @@
         border-color: transparent;
     }
 
-    &__big {
+    &--large {
         width: 6.4375rem;
         height: 6.4375rem;
         padding: 1rem;
@@ -18,7 +18,7 @@
         border-width: 1px;
     }
 
-    &__small {
+    &--small {
         width: 3.05rem;
         height: 3.05rem;
         padding: 0.46294rem;
