--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -1,13 +1,10 @@
 {% assign c = "c-icon" %}
 
-<div class="{{ c }} {{ c }}--{{ icon_size }} {% if rounded_border %}{{c}}--round{% endif %}" style="--icon-color: {{icon_color}}">
+{% assign icon_style = svg_icon | split: '/' | first %}
+
+<div class="{{ c }} {{ c }}--{{ icon_size }} {{c}}--{{ icon_style }}" style="--c-icon-color: {{ color }}">
     {% if env_bookshop_live %}
-        {%  comment  %}
-            Because we use image for bookshop instead of SVG, the custom color don't apply to the icon.
-            TODO: make a better dev note component corresponding to this situation.
-        {% endcomment %}
-        {% if icon_fill_color != 'black' %}Sorry, you can't change color in bookshop{% endif %}
-        <img class="c-icon__svg" src="/assets/images/icons/{{svg_icon}}.svg" alt="{{svg_icon}}">
+        <div class="{{ c }}__image" style="--url: url('/assets/images/icons/{{svg_icon}}.svg')"></div>
     {% else %}
         {{ '/src/assets/images/icons/' | append: svg_icon  | append: '.svg'  | svgContents: "c-icon__svg" }}
     {% endif %}
