--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -1,9 +1,7 @@
 .c-icon {
-    --icon-color: white;
-
     &--round {
         border-radius: 50%;
-        border-color: var(--brand-grey-000, #FFF);
+        border-color: var(--c-icon-color, #FFF);
     }
 
     &:not(.c-icon--round) {
@@ -26,7 +24,22 @@
         border-width: 0.463px;
     }
 
-    &__svg {
-        fill: var(--icon-color);
+    &--outline {
+        .c-icon__svg {
+            stroke: var(--c-icon-color, #FFF);
+        }
+    }
+    &--solid {
+        .c-icon__svg {
+            fill: var(--c-icon-color, #FFF);
+        }
+    }
+
+    &__image {
+        background: var(--c-icon-color);
+        width: 100%;
+        height: 100%;
+        mask: var(--url);
+        -webkit-mask: var(--url);
     }
 }
