--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -13,7 +13,7 @@
         height: 6.4375rem;
         padding: 1rem;
         border-style: solid;
-        border-width: 1px;
+        border-width: 0.25rem;
     }
 
     &--small {
@@ -21,7 +21,7 @@
         height: 3.05rem;
         padding: 0.46294rem;
         border-style: solid;
-        border-width: 0.463px;
+        border-width: 0.1rem;
     }
 
     &--outline {
