--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -1,27 +1,30 @@
 .c-icon {
+    border: none;
+    
     &--round {
         border-radius: 50%;
         border-color: var(--c-icon-color, #FFF);
+        border-style: solid;
     }
 
-    &:not(.c-icon--round) {
-        border-color: transparent;
+    &--round.c-icon--large {
+        padding: 0.95rem;
+        border-width: 0.125rem;
+    }
+
+    &--round.c-icon--small {
+        padding: 0.4rem;
+        border-width: 0.063rem;
     }
 
     &--large {
-        width: 6.4375rem;
-        height: 6.4375rem;
-        padding: 1rem;
-        border-style: solid;
-        border-width: 0.25rem;
+        width: 4.375rem;
+        height: 4.375rem;
     }
 
     &--small {
-        width: 3.05rem;
-        height: 3.05rem;
-        padding: 0.46294rem;
-        border-style: solid;
-        border-width: 0.125rem;
+        width: 2rem;
+        height: 2rem;
     }
 
     &--outline {
