--- a/src/_includes/partials/head/stylesheets.html
+++ b/src/_includes/partials/head/stylesheets.html
@@ -1,3 +1,4 @@
 <link rel="stylesheet" href="/css/bookshop.css">
 <link rel="stylesheet" href="/css/main.css">
+<link rel="stylesheet" href="/assets/styles/main.css">
 <link rel="stylesheet" href="/assets/styles/custom-styles.css">
