--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -4,11 +4,14 @@
 body {
   display: grid;
   grid-template-columns: var(--twelve-column-grid);
+  font-family: var(--content-font);
 
   h1,
   h2,
   h3,
-  h4 {
+  h4,
+  h5,
+  h6 {
     font-family: var(--heading-font);
   }
 }
