Feat: add Lato as a fallback font if the google font doesn't exist

--- a/src/_includes/partials/head/google-fonts.html
+++ b/src/_includes/partials/head/google-fonts.html
@@ -1,4 +1,5 @@
 {% assign google_fonts = '' | split: '' %}
+{% assign google_fonts = google_fonts | push: "Lato" %}
 
 {% for font in fonts %}
   {% assign google_fonts = google_fonts | push: font %}
