--- a/component-library/components/generic/labelled-icon/labelled-icon.eleventy.liquid
+++ b/component-library/components/generic/labelled-icon/labelled-icon.eleventy.liquid
@@ -1,6 +1,6 @@
 {%  assign c = 'c-labelled-icon' %}
 
-<div class="{{ c }} {{ c }}--{{ layout }}">
+<div class="{{ c }} {{ c }}--{{ arrangement }}">
     {% if icon %}{% bookshop "generic/icon" bind:icon %}{% endif %}
     <p class="{{ c }}__text">{{ text }}</p>
 </div>
