--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -47,6 +47,12 @@
                     color: var(--brand-grey-000, #F9F9FB);
                 }
             }
+            &--active {
+                #{$c}__navlist__item__link {
+                    text-decoration: underline;
+                    color: var(--brand-grey-000, #F9F9FB);
+                }
+            }
         }
 
     }
