Feat: add check around displaying image

--- a/component-library/components/generic/video/video.eleventy.liquid
+++ b/component-library/components/generic/video/video.eleventy.liquid
@@ -1,7 +1,7 @@
 {% assign c = "c-video" %}
 <div class="{{ c }}__video-aspect-wrapper">
   <div class="{{ c }}__video">
-    <img class="{{ c }}__default-image" src="{{ fallback_image.image_path }}" alt="{{ fallback_image.image_alt }}">
+    {% if fallback_image.image_path %}<img class="{{ c }}__default-image" src="{{ fallback_image.image_path }}" alt="{{ fallback_image.image_alt }}">{% endif %}
 
     {% if video_url %}
       {% if video_source == "Vimeo" %}
