--- a/component-library/components/generic/video/video.eleventy.liquid
+++ b/component-library/components/generic/video/video.eleventy.liquid
@@ -1,6 +1,7 @@
 {% assign c = "c-video" %}
 <div class="{{ c }}__video-aspect-wrapper">
   <div class="{{ c }}__video">
+    {% comment %} TODO: potentially replace with image component {% endcomment %}
     {% if fallback_image.image_path %}<img class="{{ c }}__default-image" src="{{ fallback_image.image_path }}" alt="{{ fallback_image.image_alt }}">{% endif %}
 
     {% if video_url %}
