--- a/component-library/components/generic/component-heading/component-heading.eleventy.liquid
+++ b/component-library/components/generic/component-heading/component-heading.eleventy.liquid
@@ -1,10 +1,10 @@
 {% assign c = "c-component-heading" %}
 
-<section class="{{ c }} {{ c }}--{{ text_alignment }}">
+<header class="{{ c }} {{ c }}--{{ text_alignment }}">
   <h2 class="{{ c }}__primary_heading {{ c }}__primary_heading--{{ text_alignment }}">
     {{ primary_heading }}
   </h2>
   <h3 class="{{ c }}__eyebrow_heading {{ c }}__eyebrow_heading--{{ text_alignment }}">
     {{ eyebrow_headline }}
   </h3>
-</section>
+</header>
