--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -22,10 +22,10 @@
   --button: 1rem;
   --line-height: normal;
   --letter-spacing: 0;
-  --letter-spacing-eyebrow: 0.25rem;
+  --letter-spacing-wide: 0.25rem;
   --font-weight-headings: 700;
   --font-weight-body: 400;
-  --font-weight-button: 700;
+  --font-weight-bold: 700;
 
   /* Colors */
   // Gray
