Fix: variable name

--- a/component-library/components/generic/component-heading/component-heading.scss
+++ b/component-library/components/generic/component-heading/component-heading.scss
@@ -11,7 +11,7 @@
 
   &__eyebrow_heading {
     grid-row: 1;
-    font-size: var(--eyebrow_heading);
+    font-size: var(--eyebrow-heading);
     letter-spacing: var(--letter-spacing-wide);
     text-transform: uppercase;
   }
