Fix: container name (head -> header)

--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -1,6 +1,6 @@
 {% assign c = "c-navigation" %}
 
-<head>
+<header>
     <nav class="{{c}}" aria-label="Main menu" id="main-menu">
 
         <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url=="/" %}aria-current="page" {% endif %}>
@@ -31,9 +31,10 @@
         </ul>
 
         <div class="{{ c }}__social-icons">
+            Social Icons Placeholder
             {% comment %}
             TODO: social-icons go here
             {% endcomment %}
         </div>
     </nav>
-</head>
+</header>
