Feat: add comments and more options around a text logo

--- a/src/_includes/partials/head/stylesheets.html
+++ b/src/_includes/partials/head/stylesheets.html
@@ -5,6 +5,7 @@
     --dark-background-variant: {{ site.styles.dark_background_variant | default: "#1B1B1D" }};
     --heading-font: {{ site.styles.heading_font | default: "Lato" }};
     --content-font: {{ site.styles.content_font | default: "Lato" }};
+    --logo-font: {{ nav.logo_text.font | default: "Lato" }};
   }
 </style>
 
