--- a/src/assets/styles/nav.scss
+++ b/src/assets/styles/nav.scss
@@ -11,6 +11,7 @@
         grid-column: 2 / -3;
         text-decoration: none;
         color: var(--brand-grey-200, #E9E9EC);
+        font-family: var(--logo-font), Lato, sans-serif;
         font-size: 2rem;
         line-height: 3.75rem;
         white-space: nowrap;
