--- a/src/_includes/partials/head/google-fonts.html
+++ b/src/_includes/partials/head/google-fonts.html
@@ -2,6 +2,7 @@
 {% assign google_fonts = google_fonts | push: "Lato" %}
 {% assign google_fonts = google_fonts | push: site.styles.heading_font %}
 {% assign google_fonts = google_fonts | push: site.styles.content_font %}
+{% unless nav.logo_image %}{% assign google_fonts = google_fonts | push: nav.logo_text.font %}{% endunless %}
 
 {% assign google_fonts = google_fonts | uniq %}
 {% assign count = 0 %}
