--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -4,10 +4,10 @@
     <nav class="{{c}}" aria-label="Main menu" id="main-menu">
 
         <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url=="/" %}aria-current="page" {% endif %}>
-            {% if nav.navigation_heading %}
-                <span class="{{c}}__logo-link__text">{{ nav.navigation_heading }}</span>
+            {% if nav.logo_image %}
+                <img class="{{c}}__logo-link__image" src="{{nav.logo_image}}" alt="Site logo" />
             {% else %}
-                <img class="{{c}}__logo-link__image" src="{{nav.logo_image}}" alt="Site logotype" />
+                <span class="{{c}}__logo-link__text">{{ nav.logo_text.name }}</span>
             {% endif %}
         </a>
 
