--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -7,7 +7,7 @@
             {% if nav.logo_image %}
                 <img class="{{c}}__logo-link__image" src="{{nav.logo_image}}" alt="Site logo" />
             {% else %}
-                <span class="{{c}}__logo-link__text">{{ nav.logo_text.name }}</span>
+                <span class="{{c}}__logo-link__text">{{ nav.logo_text.text }}</span>
             {% endif %}
         </a>
 
