--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -55,7 +55,7 @@
   --success-green-400: #017737;
   --success-green-500: #005824;
 
-  --feature-image-opacity: #1b1b1d99;
+  --header-color: #1b1b1d99;
 
 }
 
