--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -4,7 +4,7 @@
     <nav class="{{c}}" aria-label="Main menu" id="main-menu">
 
         <a class="{{c}}__logo-link" href="/" aria-label="Home" {% if page.url=="/" %}aria-current="page" {% endif %}>
-            {% if nav.logo_image %}
+            {% if nav.logo_image != '' %}
                 <img class="{{c}}__logo-link__image" src="{{nav.logo_image}}" alt="Site logo" />
             {% else %}
                 <span class="{{c}}__logo-link__text">{{ nav.logo_text.text }}</span>
