Fix: load map in bookshop browser

--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -18,11 +18,12 @@
             {{ content }}
         </main>
         {% include 'partials/footer/footer.html' %}
-
     </body>
     {% if content_blocks %}
         {% if content_blocks | contains_block: "simple/google-map-embed" %}
             {% include 'partials/map/map-initialisation.html' %}
         {% endif %}
+    {% elsif page.url == "/components/" %}
+        {% include 'partials/map/map-initialisation.html' %}
     {% endif %}
 </html>
