--- a/component-library/components/simple/google-map-embed/google-map-embed.scss
+++ b/component-library/components/simple/google-map-embed/google-map-embed.scss
@@ -1,7 +1,4 @@
 .c-google-map-embed {
-  height: 400px; // The parent element/component should define the embed height
-
-  &__element {
+    min-height: 200px;
     height: 100%;
-  }
 }
