--- a/src/_includes/partials/map/map-initialisation.html
+++ b/src/_includes/partials/map/map-initialisation.html
@@ -83,18 +83,23 @@
   ];
 
   // Initialise each map on the page
-  function initMap() {
+  async function initMap() {
     const mapEl = document.getElementById("map");
     const mapLat = parseFloat(mapEl.getAttribute("maplat"));
     const mapLong = parseFloat(mapEl.getAttribute("maplong"));
     const mapZoom = parseFloat(mapEl.getAttribute("mapzoom"));
-    console.log(`${mapLat} | ${mapLong}`)
     const map = new google.maps.Map(mapEl, {
       center: { lat: mapLat, lng: mapLong },
       zoom: (mapZoom ? mapZoom + 5 : 13), // The user-editable mapZoom value is 5 less than Google's to make it a more logical zoom scale (0-13 opposed to 5-18)
       styles: mapStyles,
     });
+    var marker = new google.maps.Marker({
+      position: { lat: mapLat, lng: mapLong },
+      map: map,
+    });
   }
+
+
   window.initMap = initMap;
 </script>
 <script
