--- a/src/_includes/partials/map/map-initialisation.html
+++ b/src/_includes/partials/map/map-initialisation.html
@@ -103,5 +103,5 @@
   window.initMap = initMap;
 </script>
 <script
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+  src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_api_key }}&callback=initMap&v=weekly"
   defer></script>
