--- a/src/_includes/partials/map/map-initialisation.html
+++ b/src/_includes/partials/map/map-initialisation.html
@@ -106,5 +106,5 @@
   window.initMap = initMap;
 </script>
 <script
-  src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_api_key }}&callback=initMap&v=weekly"
+  src="https://maps.googleapis.com/maps/api/js?key={{ site.google_maps_api_key | default: 'AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg' }}&callback=initMap&v=weekly"
   defer></script>
