--- a/component-library/components/simple/google-map-embed/google-map-embed.scss
+++ b/component-library/components/simple/google-map-embed/google-map-embed.scss
@@ -2,3 +2,31 @@
     min-height: 200px;
     height: 100%;
 }
+
+.c-google-map-embed--live-editing, .c-google-map-embed--no-key {
+    --background-image: '';
+    background-image: var(--background-image);
+    min-height: 200px;
+    display: flex;
+    justify-content: center;
+
+    &__message {
+        background-color: white;
+        padding: 15px 25px;
+        margin: 5px 0px;
+        border: 1px solid rgba(0, 0, 0, 0.12);
+        border-radius: 5px;
+        height: fit-content;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        &__warning {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            justify-content: center;
+        }
+    }
+}
