--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -1,1 +1,10 @@
-{% image image_path, image_alt %}
+{% if env_bookshop_live %}
+
+    <img src="{{ image_path }}" alt="{{ image_alt }}">
+
+{% else %}
+
+    {% assign image_path = "src/" | append: image_path %}
+    {% image image_path, image_alt %}
+
+{% endif %}
