Feat: use icon subcomponent

--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -1,6 +1,9 @@
 .c-icon {
     border: none;
     flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
     &--round {
         border-radius: 50%;
@@ -45,5 +48,9 @@
         height: 100%;
         mask: var(--url);
         -webkit-mask: var(--url);
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+        mask-position: center;
+        -webkit-mask-position: center;
     }
 }
