--- a/component-library/components/generic/social-icons/social-icons.eleventy.liquid
+++ b/component-library/components/generic/social-icons/social-icons.eleventy.liquid
@@ -1,21 +1,10 @@
-{% assign c = "c-social-icons" %}
+{% assign si = "c-social-icons" %}
 
-{% if env_bookshop_live %}
-  <p>Does not render correctly in the bookshop browser</p>
-{% endif %}
-
-<div class="{{ c }}" style="--hover-color: {{ style.icon_hover_color }}; --fill-color: {{ style.icon_fill_color }}; --fill-color-hover: {{ style.icon_fill_color_hover }};">
+<div class="{{ si }}" style="--hover-color: {{ style.icon_hover_color }}; --fill-color: {{ style.icon_fill_color }}; --fill-color-hover: {{ style.icon_fill_color_hover }};">
 
     {% for item in social_media_links %}
-      {% if env_bookshop_live %}
-      <a class="{{ c }}__icon" href="{{ item.link_url }}" target="_blank" rel="noopener noreferrer">
-        <img src="{{ "/assets/images/icons/social/" | append: item.svg_icon | append: ".svg"  }}" alt="{{ item.label }} logo">
+          <a class="{{ si }}__icon" href="{{ item.link_url }}" target="_blank" rel="noopener noreferrer">
+              {% bookshop "generic/icon" svg_icon:item.svg_icon icon_size:'small' rounded_border:true color:'transparent' %}
           </a>
-
-      {% else  %}
-          <a class="{{ c }}__icon" href="{{ item.link_url }}" target="_blank" rel="noopener noreferrer">
-              {{ "/src/assets/images/icons/social/" | append: item.svg_icon | append: ".svg" | svgContents }}
-          </a>
-      {% endif %}
     {% endfor %}
 </div>
