Feat: add social icons to nav

--- a/src/_includes/partials/nav/navigation.html
+++ b/src/_includes/partials/nav/navigation.html
@@ -31,10 +31,7 @@
         </ul>
 
         <div class="{{ c }}__social-icons">
-            Social Icons Placeholder
-            {% comment %}
-            TODO: social-icons go here
-            {% endcomment %}
+            {% bookshop "generic/social-icons" social_media_links:site.social_media_links style:site.style %}
         </div>
     </nav>
 </header>
