--- a/component-library/components/generic/social-icons/social-icons.scss
+++ b/component-library/components/generic/social-icons/social-icons.scss
@@ -1,5 +1,7 @@
 .c-social-icons {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
   
