Feat: add checks for if inputs are included (stop weird spacing)

--- a/component-library/components/sections/price-list/price-list.eleventy.liquid
+++ b/component-library/components/sections/price-list/price-list.eleventy.liquid
@@ -5,7 +5,7 @@
             {% endif %}">
     
     <div class="{{ pl }}__heading">
-        {% bookshop "generic/component-heading" bind:content.heading %}
+        {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
         {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
     </div>
 
