--- a/component-library/components/structure/left-right-block/left-right-block.scss
+++ b/component-library/components/structure/left-right-block/left-right-block.scss
@@ -1,4 +1,5 @@
 .c-left-right-block {
+  $c: &;
   //Colors added for demo only. Remove before merge.
   background-color: var(--brand-grey-900, );
   color: var(--brand-grey-000, #F9F9FB);
@@ -10,12 +11,13 @@
   }
 
   &__content {
-    padding: 6rem 0 3rem 0;
+    padding: 6rem 0;
     grid-column: 2 / -2;
   }
 
   &__content-text {
     margin-bottom: 1.5rem;
+    max-width: 32.0625rem;
   }
 
   &__content-wrapper {
@@ -26,19 +28,27 @@
   &__icons {
     display: flex;
     justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 2.18rem;
     margin-bottom: 1.5rem;
   }
 
   &__buttons {
     display: flex;
     justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 1rem;
   }
 
 
   &__image {
+    height: 100%;
     object-fit: cover;
     grid-column: 1 / -1;
   }
+
 
   // Tablet styles
   @media screen and (min-width: 768px) {
@@ -49,12 +59,22 @@
   @media screen and (min-width: 1279px) {
     &__content {
       grid-column: 2 / 7;
-      padding: 0;
       align-self: center;
     }
 
     &__image {
-      grid-column: 7 / -2;
+      grid-column: 8 / -2;
+    }
+
+    &--right {
+      #{$c}__content {
+        grid-column: 9 / -2;
+      }
+
+      #{$c}__image {
+        grid-column: 2 / 8;
+        grid-row: 1;
+      }
     }
   }
 }
