--- a/component-library/components/simple/content-block/content-block.scss
+++ b/component-library/components/simple/content-block/content-block.scss
@@ -1,5 +1,5 @@
 .c-content-block {
-    grid-column: 2 / -2;
+    grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -10,18 +10,17 @@
     &--container {
         display: grid;
         grid-template-columns: var(--twelve-column-grid);
-        width: var(--desktop-large, 87.5rem);
-        padding: 6rem 7.6875rem;
+        padding: 6rem 1rem;
         justify-content: center;
         align-items: center;
     }
 
-    @media screen and (min-width: 1279px) {
-        grid-column: 0 / -0;
+    // Desktop styles
+    @media screen and (min-width: 768px ) {
+        grid-column: 3 / -3;
 
         &--container {
-            width: var(--mobile, 29.9375rem);
-            padding: 6rem 1rem;
+            padding: 6rem 7.6875rem;
         }
     }
 }
