Feat: add tag for creating local variables (scoped to the component)

--- a/component-library/components/generic/component-heading/component-heading.eleventy.liquid
+++ b/component-library/components/generic/component-heading/component-heading.eleventy.liquid
@@ -1,4 +1,4 @@
-{% assign c = "c-component-heading" %}
+{% assign_local c = "c-component-heading" %}
 
 <header class="{{ c }}">
   <h2 class="{{ c }}__primary_heading">
