--- a/component-library/components/generic/labelled-icon/labelled-icon.eleventy.liquid
+++ b/component-library/components/generic/labelled-icon/labelled-icon.eleventy.liquid
@@ -1,4 +1,4 @@
-{%  assign c = 'c-labelled-icon' %}
+{% assign_local c = 'c-labelled-icon' %}
 
 <div class="{{ c }} {{ c }}--{{ arrangement }}">
     {% if icon %}{% bookshop "generic/icon" bind:icon %}{% endif %}
