Feat: define empty bookshop plugin so the image component works in bookshop browser

--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -1,6 +1,6 @@
 {% if env_bookshop_live %}
 
-    <img src="{{ image_path }}" alt="{{ image_alt }}">
+    <img class="c-image--live-editing" src="{{ image_path }}" alt="{{ image_alt }}">
 
 {% else %}
 
