--- a/component-library/components/structure/left-right-block/left-right-block.eleventy.liquid
+++ b/component-library/components/structure/left-right-block/left-right-block.eleventy.liquid
@@ -1,6 +1,8 @@
 {% assign c = "c-left-right-block" %}
 
-<section class="{{ c }} {% if styles.orientation == "Right" %}{{ c }}--right{% endif %}">
+<section class="{{ c }} component {% if styles.orientation == "Right" %}{{ c }}--right{% endif %} {% if styles.background_variant == "Dark" %} 
+  component--dark
+{% endif %}">
   <div class="{{ c }}__content">
     <div class="{{ c }}__content-wrapper">
       {% bookshop "generic/component-heading" bind: data.heading %}
