--- a/component-library/components/structure/left-right-block/left-right-block.scss
+++ b/component-library/components/structure/left-right-block/left-right-block.scss
@@ -16,6 +16,7 @@
   &__content-text {
     margin-bottom: 1.5rem;
     max-width: 32.0625rem;
+    text-wrap: pretty;
   }
 
   &__content-wrapper {
