--- a/component-library/components/generic/button/button.eleventy.liquid
+++ b/component-library/components/generic/button/button.eleventy.liquid
@@ -1,11 +1,11 @@
 {% assign c = "c-button" %}
 
 {% if url and url!=''%}
-<a href="{{ url }}" class="{{c}} {{c}}--{{ variant }} {% if disabled==true %}{{c}}--disabled{% endif %}">
-    {{ text }}
-</a>
+    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %}>
+        {{ text }}
+    </a>
     {% else %}
-    <button class="{{c}} {{c}}--{{ variant }}">
-        {{ text  }}
+    <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %}>
+        {{ text }}
     </button>
 {% endif %}
